Enable test-aws make target that runs all tests with LocalStack AWS emulation